fix map alignment issue in Firefox

--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.geographic-chart-tab {
+  @extend .clearfix;
+}
+
 .search-results {
 
   &__results-summary {
